--- a/src/app/shared/components/product-card/product-card.component.html
+++ b/src/app/shared/components/product-card/product-card.component.html
@@ -20,7 +20,7 @@
   </div>
   <div class="footer">
     <span class="price">{{ product.price | currency }}</span>
-    <button mat-button mat-raised-button type="button"
+    <button mat-mini-fab type="button"
       *ngIf="showAddToCartButton"
       class="add-to-cart"
       color="primary"
