feat: add label to show selected products count

--- a/src/app/shared/dialogs/products-array/products-array-dialog.component.css
+++ b/src/app/shared/dialogs/products-array/products-array-dialog.component.css
@@ -40,6 +40,14 @@ app-product-filters-panel {
   width: 3rem;
 }
 
+.summary {
+  margin-top: 1rem;
+}
+.summary > * {
+  display: block;
+  text-align: center;
+}
+
 .actions {
   margin-top: 1rem;
   display: flex;
