--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -5,6 +5,11 @@
   https://opensource.org/licenses/MIT
 -->
 
+<app-whatsapp-button size="2.5rem" padding="0.75rem"
+  *ngIf="whatsapp.enabled"
+  [areaCode]="whatsapp.areaCode"
+  [phone]="whatsapp.urlSafePhone">
+</app-whatsapp-button>
 <app-store-header></app-store-header>
 <div class="content">
   <router-outlet></router-outlet>
