--- a/src/app/shared/components/slideshow/slideshow.component.html
+++ b/src/app/shared/components/slideshow/slideshow.component.html
@@ -32,14 +32,14 @@
 </div>
 <ng-container *ngIf="showNextPreviousButtons">
   <button type="button" class="previous-slide"
-    mat-fab
+    mat-mini-fab
     color="primary"
     title="Ver anterior"
     (click)="slideBackwards()">
     <mat-icon>first_page</mat-icon>
   </button>
   <button type="button" class="next-slide"
-    mat-fab
+    mat-mini-fab
     color="primary"
     title="Ver siguiente"
     (click)="slideForwards()">
