--- a/src/app/store/components/header/menu/store-header-menu.component.css
+++ b/src/app/store/components/header/menu/store-header-menu.component.css
@@ -21,8 +21,18 @@
   border-bottom-style: solid;
 }
 
-.open-menu mat-icon {
-  width: 3rem;
-  height: 3rem;
-  font-size: 3rem;
+@media(max-width: 640px) {
+  .open-menu mat-icon {
+    width: 1rem;
+    height: 1rem;
+    font-size: 1rem;
+  }
+}
+
+@media(min-width: 641px) {
+  .open-menu mat-icon {
+    width: 2.5rem;
+    height: 2.5rem;
+    font-size: 2.5rem;
+  }
 }
