--- a/src/app/store/routes/search/store-search.component.html
+++ b/src/app/store/routes/search/store-search.component.html
@@ -12,7 +12,7 @@
   <h3 i18n="Title for page on search results">Resultados de búsqueda</h3>
   <ng-container *ngIf="(totalCount$ | async) === 0; else results">
     <div class="empty">
-      <p i18n="Label to hint users that the search">No hay nada que mostrar aquí...</p>
+      <p i18n="Label to hint users that there are zero results present">No products matched your search</p>
       <mat-icon>sentiment_very_dissatisfied</mat-icon>
     </div>
   </ng-container>
