--- a/src/app/store/components/footer/store-footer.component.html
+++ b/src/app/store/components/footer/store-footer.component.html
@@ -5,4 +5,62 @@
   https://opensource.org/licenses/MIT
 -->
 
-<p *ngFor="let text of footerParagraphs">{{ text }}</p>
+<div class="contact">
+  <div class="whatsapp sales"
+    *ngIf="whatsappNumber">
+    <strong i18n="Label for section referring to a contact WhatsApp number">WhatsApp</strong>
+    <div>
+      <a href="https://wa.me/{{ whatsappUrlSafeNumber }}">
+        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/whatsapp.svg" class="whatsapp icon"
+          i18n-alt="Label for WhatsApp icon"
+          alt="WhatsApp" aria-hidden="true" />
+        <span>{{ whatsappNumber }}</span>
+      </a>
+    </div>
+  </div>
+  <div class="general phone"
+    *ngIf="contactInfo.phone">
+    <strong i18n="Label for section referring to a contact phone number">Phone</strong>
+    <div>
+      <a href="tel:{{ contactInfo.urlSafePhone }}">
+        <img src="https://unpkg.com/@fortawesome/fontawesome-free/svgs/solid/phone-alt.svg" class="phone icon"
+        i18n-alt="Label for phone number icon"
+          alt="Contact phone number" aria-hidden="true" />
+        <span>{{ contactInfo.phone  }}</span>
+      </a>
+    </div>
+  </div>
+  <div class="general email"
+    *ngIf="contactInfo.email">
+    <strong i18n="Label for section referring to a contact e-mail address">E-Mail</strong>
+    <a href="mailto:{{ contactInfo.email }}">
+      <img src="https://unpkg.com/@fortawesome/fontawesome-free/svgs/solid/envelope.svg" class="envelope icon"
+        i18n-alt="Label for envelope (email) icon"
+        alt="Contact e-mail" aria-hidden="true" />
+      <span>{{ contactInfo.email }}</span>
+    </a>
+  </div>
+</div>
+<mat-divider></mat-divider>
+<div class="social">
+  <strong i18n="Label that invites users to check social media profiles">Follow us on social media</strong>
+  <ul>
+    <li *ngIf="contactInfo.instagram">
+      <a href="https://www.instagram.com/{{ contactInfo.instagram }}">
+        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/instagram.svg" class="instagram icon"
+        i18n-alt="Label for Instagram icon"
+        alt="Instagram" aria-hidden="false" />
+      </a>
+    </li>
+    <li *ngIf="contactInfo.facebook">
+      <a href="https://www.facebook.com/{{ contactInfo.facebook }}">
+        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/facebook.svg" class="facebook icon"
+          i18n-alt="Label for Facebook icon"
+          alt="Facebook" aria-hidden="false" />
+      </a>
+    </li>
+  </ul>
+</div>
+<div class="lower">
+  <p *ngFor="let text of footerParagraphs">{{ text }}</p>
+</div>
