--- a/src/assets/mixins/footer.component.scss
+++ b/src/assets/mixins/footer.component.scss
@@ -22,6 +22,16 @@
     background-color: mat.get-color-from-palette($primary);
     color: white;
   }
+
+  app-store-footer a,
+  app-management-footer a {
+    color: white;
+  }
+
+  app-store-footer .icon,
+  app-management-footer .icon {
+    filter: invert(100%);
+  }
 }
 
 @mixin footer-theme($theme) {
