fix: sync product details view to query params

--- a/src/app/shared/components/products-display/products-display.component.html
+++ b/src/app/shared/components/products-display/products-display.component.html
@@ -15,7 +15,8 @@
       *ngFor="let product of products"
       [product]="product"
       [showAddToCartButton]="showAddToCartButtons"
-      (addToCart)="onAddProductToCart(product)">
+      (addToCart)="onAddProductToCart(product)"
+      (view)="onViewProduct(product)">
     </app-product-card>
   </div>
 </div>
