--- a/src/app/store/components/product-list-contents-display/store-product-list-contents-display.component.html
+++ b/src/app/store/components/product-list-contents-display/store-product-list-contents-display.component.html
@@ -13,5 +13,6 @@
   [pageSize]="pageSize"
   [showAddToCartButtons]="true"
   (page)="onPage($event)"
-  (addProductToCart)="onAddProductToCart($event)">
+  (addProductToCart)="onAddProductToCart($event)"
+  (viewProduct)="onViewProduct($event)">
 </app-products-display>
