--- a/src/app/store/routes/search/store-search.component.html
+++ b/src/app/store/routes/search/store-search.component.html
@@ -28,7 +28,8 @@
         *ngFor="let product of (searchResults$ | async)"
         [showAddToCartButton]="true"
         [product]="product"
-        (addToCart)="onAddProductToCart(product)">
+        (addToCart)="onAddProductToCart(product)"
+        (view)="onViewProduct(product)">
       </app-product-card>
     </div>
   </ng-template>
