style: gradient as product card hover background

--- a/src/app/shared/components/product-card/product-card.component.css
+++ b/src/app/shared/components/product-card/product-card.component.css
@@ -23,7 +23,10 @@ mat-card {
   text-align: center;
 }
 .content:hover {
-  background-color: rgba(0,0,0,0.2);
+  background: linear-gradient(180deg,
+                              rgba(199,199,199,1) 0%,
+                              rgba(255,255,255,1) 80%,
+                              rgba(255,255,255,1) 100%);
 }
 
 .content mat-card-title {
