--- a/src/app/shared/components/slideshow/slideshow.component.css
+++ b/src/app/shared/components/slideshow/slideshow.component.css
@@ -39,6 +39,9 @@
   max-width: 100%;
   max-height: 100%;
 }
+.slide > img.linkable {
+  cursor: pointer;
+}
 
 .slide-selectors {
   flex: 0 0 auto;
