--- a/src/app/store/routes/search/store-search.component.html
+++ b/src/app/store/routes/search/store-search.component.html
@@ -9,7 +9,7 @@
 </app-centered-mat-spinner>
 
 <div class="container" [hidden]="isLoadingSearch$ | async">
-  <h3 i18n="Title for page on search results">Resultados de búsqueda</h3>
+  <h3 i18n="Title for page on search results">Search results</h3>
   <ng-container *ngIf="(totalCount$ | async) === 0; else results">
     <div class="empty">
       <p i18n="Label to hint users that there are zero results present">No products matched your search</p>
