feat: prompt details in sales page
when clicking on a table row, a dialog will open up
said dialog includes buttons to interact with recently added api methods

--- a/src/app/management/routes/sales/management-sales.component.css
+++ b/src/app/management/routes/sales/management-sales.component.css
@@ -21,3 +21,11 @@
   min-width: 6rem;
   width: 6rem;
 }
+
+.mat-row:not(.focused):hover {
+  cursor: pointer;
+}
+.mat-row:hover,
+.mat-row.focused {
+  background-color: whitesmoke;
+}
