--- a/src/app/store/routes/catalog/store-catalog.component.html
+++ b/src/app/store/routes/catalog/store-catalog.component.html
@@ -6,14 +6,18 @@
 -->
 
 <h2 i18n="Title of page for the storefront">Store Frontpage</h2>
-
 <app-centered-mat-spinner *ngIf="loading$ | async">
 </app-centered-mat-spinner>
-
 <div class="products" [hidden]="loading$ | async">
   <app-store-product-list-contents-display
     *ngFor="let list of (lists$ | async)"
     [list]="list"
     (addProductToCart)="onAddProductToCart($event)">
   </app-store-product-list-contents-display>
+</div>
+<mat-divider></mat-divider>
+<div class="location">
+  <app-store-location
+    [mapHeight]="200">
+  </app-store-location>
 </div>
