fix(tech): unability to modify images of products
slideshow component now integrates with angular forms

--- a/src/app/shared/components/product-form/product-form.component.html
+++ b/src/app/shared/components/product-form/product-form.component.html
@@ -7,7 +7,7 @@
 
 <form [formGroup]="formGroup">
   <app-slideshow class="images"
-    [images]="images"
+    formControlName="images"
     [autocycle]="false"
     [editable]="true"
     (add)="onClickAddImage()">
