fix(tech): update api filter key

--- a/src/app/shared/components/product-filters-panel/product-filters-panel.component.html
+++ b/src/app/shared/components/product-filters-panel/product-filters-panel.component.html
@@ -19,7 +19,7 @@
     </app-product-category-selector-form-field>
 
     <mat-form-field>
-      <input matInput formControlName="name"
+      <input matInput formControlName="nameLike"
         placeholder="By Product name"
         i18n-placeholder="Name of field for filtering products by partial name" />
     </mat-form-field>
