--- a/src/app/store/components/product-list-contents-display/store-product-list-contents-display.component.html
+++ b/src/app/store/components/product-list-contents-display/store-product-list-contents-display.component.html
@@ -7,6 +7,7 @@
 
 <h3>{{ list.name }}</h3>
 <app-products-display
+  [loading]="loadingProducts"
   [products]="products$ | async"
   [totalCount]="totalCount$ | async"
   [pageIndex]="pageIndex"
